Added babel/preset-env and babel/preset-react, modiied webpack.config file

--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "react-dom": "^16.5.2"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.4",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
+    "@babel/core": "^7.0.0-beta.33",
+    "@babel/plugin-transform-runtime": "^7.0.0-beta.33",
+    "@babel/preset-env": "^7.0.0-beta.33",
+    "@babel/preset-react": "^7.0.0-beta.33",
+    "@babel/register": "^7.0.0-beta.33",
+    "@babel/runtime": "^7.0.0-beta.33",
+    "babel-eslint": "^8.0.3",
+    "babel-loader": "^8.0.0-beta.0",
+    "babel-plugin-root-import": "^5.1.0",
+    "babel-preset-react-optimize": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
